2010-08-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el: require mm-url.
	(gnus-html-wash-tags): Clarify the code a bit by renaming the variable
	with the url to `url'.

2010-08-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el: As per discussion 3 years, 8 weeks, 3 days, 9 hours, 57
	minutes, 56 seconds ago on the ding list, remove the `w' and `i'
	bindings, as they aren't useful at all. `w' is moved to `W w'.

	* gnus-move.el: Removed file, since it doesn't really work.

	* gnus-html.el (gnus-article-html): Tell w3m that the input is
	UTF-8. This seems to fix problems with some German web feeds.

	* gnus.el (gnus-group-startup-message): Put the xpm version of the logo
	at the top so that the proper colours are applied.

	* gnus-xmas.el (gnus-xmas-create-image): Make this work on files that
	don't have dots in their names.

	* gnus-art.el (gnus-article-view-part): Doc fix.

	* gnus-html.el (gnus-html-put-image): Use gnus-create-image to be
	XEmacs-compatible.
	(gnus-html-put-image): Don't do images on non-graphic displays.

	* nnslashdot.el: Removed this unused backend.

	* gnus-undo.el (gnus-undo-register-1): Limit the undo actions to 100
	actions.
	(gnus-undo-register-1): Revert last change.

	* gnus-group.el (gnus-group-completing-read): Protect against not
	having completion-styles bound.

	* mml.el (mml-insert-mime-headers-always): Change the default to t, to
	make broken recipients happier.

	* gnus-html.el (gnus-html-put-image): Use gnus-put-image.

	* gnus-ems.el (gnus-put-image): Have gnus-put-image take an optional
	point parameter.

	* gnus-xmas.el (gnus-xmas-put-image): Ditto.

	* gnus-group.el (gnus-group-completing-read): Add 'substring to
	completion-styles for group selection.

2009-02-04  Andreas Schwab  <schwab@suse.de>

	* gnus-score.el (gnus-score-string): Fix regex for matching extra
	headers and regexp-quote the match if necessary.

2009-03-24  Miles Bader  <miles@gnu.org>
